--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ www.nsc.edu.bd" class="btn btn-primary">College Web</a>
     <a href="https://www.linkedin.com/in/farhan-tariq-459a61182/" class="btn btn-primary">linkedin</a>
   </div>
   <div class="card-footer text-muted">
-    ©2019. All Rights Reserved by Farhan Tariq.
+    Â©2019. All Rights Reserved by Farhan Tariq.
   </div>
 </div>
 </div>
